--- a/Notebooks/main.ipynb
+++ b/Notebooks/main.ipynb
@@ -1,9 +1,25 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# Whatsapp Chat Analyser"
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Reading Chat"
+   ],
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "source": [],
+   "source": [
+    "import pandas as pd"
+   ],
    "outputs": [],
    "metadata": {}
   }
