--- a/Notebooks/main.ipynb
+++ b/Notebooks/main.ipynb
@@ -63,35 +63,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>9/7/14</td>\n",
+       "      <td>2014-09-07</td>\n",
        "      <td>22:57:00</td>\n",
        "      <td>BD</td>\n",
        "      <td>Yo yo</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>10/16/14</td>\n",
+       "      <td>2014-10-16</td>\n",
        "      <td>23:02:00</td>\n",
        "      <td>BD</td>\n",
        "      <td>Dude one help pro</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>10/17/14</td>\n",
+       "      <td>2014-10-17</td>\n",
        "      <td>17:24:00</td>\n",
        "      <td>sony</td>\n",
        "      <td>dude going tmrw is a waste of time</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>10/17/14</td>\n",
+       "      <td>2014-10-17</td>\n",
        "      <td>16:08:00</td>\n",
        "      <td>BD</td>\n",
        "      <td>Yyyyyy u tell me please why aren't u not coming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>10/17/14</td>\n",
+       "      <td>2014-10-17</td>\n",
        "      <td>22:28:00</td>\n",
        "      <td>sony</td>\n",
        "      <td>what doing</td>\n",
@@ -101,12 +101,12 @@
        "</div>"
       ],
       "text/plain": [
-       "       Date      Time  Name                                          Message\n",
-       "0    9/7/14  22:57:00    BD                                            Yo yo\n",
-       "1  10/16/14  23:02:00    BD                                Dude one help pro\n",
-       "2  10/17/14  17:24:00  sony               dude going tmrw is a waste of time\n",
-       "3  10/17/14  16:08:00    BD  Yyyyyy u tell me please why aren't u not coming\n",
-       "4  10/17/14  22:28:00  sony                                       what doing"
+       "        Date      Time  Name                                          Message\n",
+       "0 2014-09-07  22:57:00    BD                                            Yo yo\n",
+       "1 2014-10-16  23:02:00    BD                                Dude one help pro\n",
+       "2 2014-10-17  17:24:00  sony               dude going tmrw is a waste of time\n",
+       "3 2014-10-17  16:08:00    BD  Yyyyyy u tell me please why aren't u not coming\n",
+       "4 2014-10-17  22:28:00  sony                                       what doing"
       ]
      },
      "metadata": {},
@@ -199,43 +199,194 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "source": [
+    "print(\"-------------------------------- Basic EDA -------------------------------------\")\r\n",
+    "\r\n",
     "total_messages = data.shape[0]\r\n",
     "print(\"Total messages :\\t\"+str(total_messages))\r\n",
     "\r\n",
     "parties_involved = data['Name'].unique()\r\n",
     "print(\"Parties involved :\\t\"+str(parties_involved))\r\n",
     "\r\n",
-    "print()\r\n",
+    "print(\"--------------------------------------------------------------------------------\")\r\n",
     "\r\n",
     "for i in parties_involved:\r\n",
-    "    print(\"%s \\t sent \\t %d messages \"%(i,data[data['Name'] == i].shape[0]))\r\n"
+    "    print(\"%s \\t sent \\t %d messages \"%(i,data[data['Name'] == i].shape[0]))\r\n",
+    "\r\n",
+    "print(\"--------------------------------------------------------------------------------\")\r\n",
+    "\r\n",
+    "print(\"Frist intraction: \")\r\n",
+    "\r\n",
+    "print(\"By \\t\\t: \" + data.iloc[0]['Name'])\r\n",
+    "print(\"On \\t\\t: \" + str(data.iloc[0]['Date']))\r\n",
+    "print(\"Message \\t: \" + data.iloc[0]['Message'])\r\n",
+    "\r\n",
+    "print(\"--------------------------------------------------------------------------------\")\r\n",
+    "\r\n",
+    "total_number_of_days = (data[\"Date\"].max() - data[\"Date\"].min()).days + 1\r\n",
+    "print (\"Total number of days : \" + str(total_number_of_days))\r\n",
+    "print (\"Avg. messages per day :\" +  str(total_messages/total_number_of_days))\r\n",
+    "\r\n",
+    "print(\"--------------------------------------------------------------------------------\")"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "-------------------------------- Basic EDA -------------------------------------\n",
       "Total messages :\t6263\n",
       "Parties involved :\t['BD' 'sony']\n",
-      "\n",
+      "--------------------------------------------------------------------------------\n",
       "BD \t sent \t 3785 messages \n",
-      "sony \t sent \t 2478 messages \n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for -: 'str' and 'str'",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-4-d6b91c6a84d8>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"%s \\t sent \\t %d messages \"\u001b[0m\u001b[1;33m%\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'Name'\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m==\u001b[0m \u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mtotal_days\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Date\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"Date\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmin\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdays\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Total days :\\t\"\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtotal_days\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'str' and 'str'"
+      "sony \t sent \t 2478 messages \n",
+      "--------------------------------------------------------------------------------\n",
+      "Frist intraction: \n",
+      "By \t\t: BD\n",
+      "On \t\t: 2014-09-07 00:00:00\n",
+      "Message \t: Yo yo\n",
+      "--------------------------------------------------------------------------------\n",
+      "Total number of days : 2577\n",
+      "Avg. messages per day :2.4303453628249905\n",
+      "--------------------------------------------------------------------------------\n"
      ]
     }
    ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "source": [
+    "import matplotlib.pyplot as plt\r\n",
+    "%matplotlib inline\r\n",
+    "\r\n",
+    "data[\"year\"] = data[\"Date\"].apply(lambda x: x.year)\r\n",
+    "\r\n",
+    "data[\"month\"] = data[\"Date\"].apply(lambda x: x.strftime(\"%b\"))\r\n",
+    "months = ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec']\r\n",
+    "data['month'] = pd.Categorical(data['month'], months)\r\n",
+    "\r\n",
+    "data[\"day_of_week\"] = data[\"Date\"].apply(lambda x: x.strftime('%a'))\r\n",
+    "day_of_week = ['Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun']\r\n",
+    "data['day_of_week'] = pd.Categorical(data['day_of_week'], day_of_week)\r\n",
+    "data.head()"
+   ],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Message</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day_of_week</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2014-09-07</td>\n",
+       "      <td>22:57:00</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>Yo yo</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Sep</td>\n",
+       "      <td>Sun</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2014-10-16</td>\n",
+       "      <td>23:02:00</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>Dude one help pro</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>Thu</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2014-10-17</td>\n",
+       "      <td>17:24:00</td>\n",
+       "      <td>sony</td>\n",
+       "      <td>dude going tmrw is a waste of time</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>Fri</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2014-10-17</td>\n",
+       "      <td>16:08:00</td>\n",
+       "      <td>BD</td>\n",
+       "      <td>Yyyyyy u tell me please why aren't u not coming</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>Fri</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2014-10-17</td>\n",
+       "      <td>22:28:00</td>\n",
+       "      <td>sony</td>\n",
+       "      <td>what doing</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>Fri</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Date      Time  Name                                          Message  \\\n",
+       "0 2014-09-07  22:57:00    BD                                            Yo yo   \n",
+       "1 2014-10-16  23:02:00    BD                                Dude one help pro   \n",
+       "2 2014-10-17  17:24:00  sony               dude going tmrw is a waste of time   \n",
+       "3 2014-10-17  16:08:00    BD  Yyyyyy u tell me please why aren't u not coming   \n",
+       "4 2014-10-17  22:28:00  sony                                       what doing   \n",
+       "\n",
+       "   year month day_of_week  \n",
+       "0  2014   Sep         Sun  \n",
+       "1  2014   Oct         Thu  \n",
+       "2  2014   Oct         Fri  \n",
+       "3  2014   Oct         Fri  \n",
+       "4  2014   Oct         Fri  "
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "source": [],
+   "outputs": [],
    "metadata": {}
   }
  ],
